# Stagiu-de-Practica

./: CMakeLists 02.08.2022.txt  CMakeLists.txt  main.c  main.cpp  new_main.c
